--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         <p>&copy; <span id="currentYear"></span> DMD. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="main.js"></script>
+    <script type="module" src="js/AppController.js"></script>
 
 </body>
 </html>
